--- a/Sites/Loja/index.html
+++ b/Sites/Loja/index.html
@@ -30,7 +30,7 @@
         <div class="carousel-wrapper" id="carouselDestaques">
             <ul class="destaques-list">
                 <li class="produto-card">
-                    <img src="" alt="bolsa">
+                    <img src="imagem/bolsa (2).png" alt="bolsa">
                     <div class="card-content">
                         <h4 class="produto-nome">Bolsa "Essência Urbana"</h4>
                         <p class="produto-preco">R$ 1.850,00</p>
@@ -38,7 +38,7 @@
                     </div>
                 </li>
                 <li class="produto-card">
-                    <img src="" alt="vestido">
+                    <img src="imagem/vestido.png" alt="vestido">
                     <div class="card-content">
                         <h4 class="produto-nome">Vestido "Aurora Radiante"</h4>
                         <p class="produto-preco">R$ 2.400,00</p>
@@ -46,7 +46,7 @@
                     </div>
                 </li>
                 <li class="produto-card">
-                    <img src="" alt="tenis">
+                    <img src="imagem/tenis1.png" alt="tenis">
                     <div class="card-content">
                         <h4 class="produto-nome">Tênis "Futuro Clássico"</h4>
                         <p class="produto-preco">R$ 980,00</p>
@@ -54,7 +54,7 @@
                     </div>
                 </li>
                 <li class="produto-card">
-                    <img src="" alt="relogio">
+                    <img src="imagem/relogio1.png" alt="relogio">
                     <div class="card-content">
                         <h4 class="produto-nome">Relógio "Tempo Sutil"</h4>
                         <p class="produto-preco">R$ 1.650,00</p>
@@ -62,7 +62,7 @@
                     </div>
                 </li>
                  <li class="produto-card">
-                    <img src="" alt="Óculos de Sol Aura">
+                    <img src="imagem/oculos aura.png" alt="Óculos de Sol Aura">
                     <div class="card-content">
                         <h4 class="produto-nome">Óculos de Sol "Aura"</h4>
                         <p class="produto-preco">R$ 349,90</p>
@@ -70,7 +70,7 @@
                     </div>
                 </li>
                 <li class="produto-card">
-                    <img src="" alt="Mochila Nomad">
+                    <img src="imagem/bolsacinza.png" alt="Mochila Nomad">
                     <div class="card-content">
                         <h4 class="produto-nome">Mochila de Couro Genuíno "Nomad"</h4>
                         <p class="produto-preco">R$ 799,00</p>
