--- a/Sites/Loja/index.html
+++ b/Sites/Loja/index.html
@@ -86,7 +86,7 @@
                     </div>
                 </li>
                 <li class="produto-card">
-                    <img src="" alt="Perfume Essência Botânica">
+                    <img src="imagem/perfume (5).png" alt="Perfume Essência Botânica">
                     <div class="card-content">
                         <h4 class="produto-nome">Perfume Unissex "Essência Botânica"</h4>
                         <p class="produto-preco">R$ 280,00</p>
@@ -114,7 +114,7 @@
                     </div>
                 </li>
                 <li class="produto-card">
-                    <img src="" alt="Vestido de Linho Sereia">
+                    <img src="imagem/blusa (3).png" alt="Vestido de Linho Sereia">
                     <div class="card-content">
                         <h4 class="produto-nome">Vestido de Linho "Sereia"</h4>
                         <p class="produto-preco">R$ 399,00</p>
@@ -122,7 +122,7 @@
                     </div>
                 </li>
                 <li class="produto-card">
-                    <img src="" alt="Calça Cargo Urbana">
+                    <img src="imagem/calca.png" alt="Calça Cargo Urbana">
                     <div class="card-content">
                         <h4 class="produto-nome">Calça Cargo "Urbana"</h4>
                         <p class="produto-preco">R$ 320,00</p>
@@ -130,7 +130,7 @@
                     </div>
                 </li>
                 <li class="produto-card">
-                    <img src="" alt="Conjunto de Moletom Conforto Total">
+                    <img src="imagem/calça.png" alt="Conjunto de Moletom Conforto Total">
                     <div class="card-content">
                         <h4 class="produto-nome">Conjunto de Moletom "Conforto Total"</h4>
                         <p class="produto-preco">R$ 450,00</p>
@@ -138,7 +138,7 @@
                     </div>
                 </li>
                 <li class="produto-card">
-                    <img src="" alt="Camisa Oversized de Sarja Minimalista">
+                    <img src="imagem/calca.png" alt="Camisa Oversized de Sarja Minimalista">
                     <div class="card-content">
                         <h4 class="produto-nome">Camisa Oversized de Sarja "Minimalista"</h4>
                         <p class="produto-preco">R$ 280,00</p>
@@ -146,7 +146,7 @@
                     </div>
                 </li>
                 <li class="produto-card">
-                    <img src="" alt="Saia Plissada Midi Elegance">
+                    <img src="imagem/" alt="Saia Plissada Midi Elegance">
                     <div class="card-content">
                         <h4 class="produto-nome">Saia Plissada Midi "Elegance"</h4>
                         <p class="produto-preco">R$ 350,00</p>
@@ -154,7 +154,7 @@
                     </div>
                 </li>
                 <li class="produto-card">
-                    <img src="" alt="Calça Jogger de Moletom Premium Urban Confort">
+                    <img src="imagem/calça (2).png" alt="Calça Jogger de Moletom Premium Urban Confort">
                     <div class="card-content">
                         <h4 class="produto-nome">Calça Jogger de Moletom Premium "Urban Confort"</h4>
                         <p class="produto-preco">R$ 260,00</p>
@@ -190,7 +190,7 @@
                     </div>
                 </li>
                 <li class="produto-card">
-                    <img src="" alt="Eau de Parfum Noite Ambarina">
+                    <img src="imagem/carteira.png" alt="Eau de Parfum Noite Ambarina">
                     <div class="card-content">
                         <h4 class="produto-nome">Eau de Parfum "Noite Ambarina"</h4>
                         <p class="produto-preco">R$ 450,00</p>
@@ -230,7 +230,7 @@
                     </div>
                 </li>
                 <li class="produto-card">
-                    <img src="" alt="Body Mist Sonho de Algodão">
+                    <img src="imagem/vestidobranco.png" alt="Body Mist Sonho de Algodão">
                     <div class="card-content">
                         <h4 class="produto-nome">Body Mist "Sonho de Algodão"</h4>
                         <p class="produto-preco">R$ 150,00</p>
@@ -266,7 +266,7 @@
                     </div>
                 </li>
                 <li class="produto-card">
-                    <img src="" alt="Mochila Antifurto Sentinel">
+                    <img src="imagem/bolsa (6).png" alt="Mochila Antifurto Sentinel">
                     <div class="card-content">
                         <h4 class="produto-nome">Mochila Antifurto "Sentinel"</h4>
                         <p class="produto-preco">R$ 480,00</p>
@@ -274,7 +274,7 @@
                     </div>
                 </li>
                 <li class="produto-card">
-                    <img src="" alt="Bolsa Transversal Urbana Chic">
+                    <img src="imagem/bolsa (5).png" alt="Bolsa Transversal Urbana Chic">
                     <div class="card-content">
                         <h4 class="produto-nome">Bolsa Transversal "Urbana Chic"</h4>
                         <p class="produto-preco">R$ 290,00</p>
@@ -282,7 +282,7 @@
                     </div>
                 </li>
                 <li class="produto-card">
-                    <img src="" alt="Clutch de Festa Eclat">
+                    <img src="imagem/bolsa (3).png" alt="Clutch de Festa Eclat">
                     <div class="card-content">
                         <h4 class="produto-nome">Clutch de Festa "Eclat"</h4>
                         <p class="produto-preco">R$ 350,00</p>
@@ -290,7 +290,7 @@
                     </div>
                 </li>
                 <li class="produto-card">
-                    <img src="" alt="Mala de Viagem Horizonte">
+                    <img src="imagem/bolsa (4).png" alt="Mala de Viagem Horizonte">
                     <div class="card-content">
                         <h4 class="produto-nome">Mala de Viagem "Horizonte"</h4>
                         <p class="produto-preco">R$ 750,00</p>
