--- a/Sites/Loja/index.html
+++ b/Sites/Loja/index.html
@@ -21,7 +21,7 @@
 </header>
 
 <main>
-<h1>🎁Produtos</h1>
+<h1 style="text-align: center;">🎁Produtos</h1>
 <section>
 <article>
     <h3>🌟Destaques</h3>
@@ -238,7 +238,7 @@
                     </div>
                 </li>
                 <li class="produto-card">
-                    <img src="" alt="Óleo de Perfume Concentrado Elixir Dourado">
+                    <img src="imagem/Óleo de Perfume Concentrado Elixir Dourado.png" alt="Óleo de Perfume Concentrado Elixir Dourado">
                     <div class="card-content">
                         <h4 class="produto-nome">Óleo de Perfume Concentrado "Elixir Dourado"</h4>
                         <p class="produto-preco">R$ 550,00</p>
@@ -410,7 +410,7 @@
         <div class="carousel-wrapper" id="carouselInstrumentos">
             <ul class="instrumentos-list">
                 <li class="produto-card">
-                    <img src="" alt="Teclado Portátil Melody Touch">
+                    <img src="imagem/Teclado Portátil Melody Touch.png" alt="Teclado Portátil Melody Touch">
                     <div class="card-content">
                         <h4 class="produto-nome">Teclado Portátil "Melody Touch"</h4>
                         <p class="produto-preco">R$ 950,00</p>
@@ -442,7 +442,7 @@
                     </div>
                 </li>
                 <li class="produto-card">
-                    <img src="" alt="Bateria Eletrônica E-Beat">
+                    <img src="imagem/Bateria Eletrônica E-Beat.png" alt="Bateria Eletrônica E-Beat">
                     <div class="card-content">
                         <h4 class="produto-nome">Bateria Eletrônica "E-Beat"</h4>
                         <p class="produto-preco">R$ 2.500,00</p>
@@ -450,7 +450,7 @@
                     </div>
                 </li>
                 <li class="produto-card">
-                    <img src="" alt="Microfone Condensador Profissional Vocal Pro">
+                    <img src="imagem/Microfone Condensador Profissional Vocal Pro.png" alt="Microfone Condensador Profissional Vocal Pro">
                     <div class="card-content">
                         <h4 class="produto-nome">Microfone Condensador Profissional "Vocal Pro"</h4>
                         <p class="produto-preco">R$ 780,00</p>
@@ -466,7 +466,7 @@
                     </div>
                 </li>
                 <li class="produto-card">
-                    <img src="" alt="Cajón Ritmo Latino">
+                    <img src="imagem/Cajón Ritmo Latino.png" alt="Cajón Ritmo Latino">
                     <div class="card-content">
                         <h4 class="produto-nome">Cajón "Ritmo Latino"</h4>
                         <p class="produto-preco">R$ 320,00</p>
